Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-95039

String translations cancelled in qsystemerror.cpp

XMLWordPrintable

    • 873119210675c0e38e076c46ec3ecabf9d2ed97e (qt/qtbase/dev) b10f55c21eecd94c25ee4f5298c87c1740c176ab (qt/qtbase/6.2)

      See https://code.qt.io/cgit/qt/qtbase.git/tree/src/corelib/kernel/qsystemerror.cpp#n131 

      // ######## this breaks moc build currently
      // ret = QCoreApplication::translate("QIODevice", s);
      ret = QString::fromLatin1(s);
      

      This causes English text to be produced even when a different language is selected.

        For Gerrit Dashboard: QTBUG-95039
        # Subject Branch Project Status CR V

            thiago Thiago Macieira
            skoh-qt Sze Howe Koh
            Votes:
            1 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes