Fix qt_error_string() and QSystemError::string's lack of i18n

There are four messages that we, for some reason I don't understand,
have our own text for instead of using strerror(). But even though they
were marked for extraction, they weren't translated.

Fixes: QTBUG-95039
Change-Id: I266f1bf9a4d84db39086fffd168f8c6dfe9c2cf4
Reviewed-by: Oswald Buddenhagen <oswald.buddenhagen@gmx.de>
(cherry picked from commit 873119210675c0e38e076c46ec3ecabf9d2ed97e)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>